--- a/www.nass.gov.ng/fecbc7cd15445dcc9e6608c5b2f159bc74ffdb80.yml
+++ b/www.nass.gov.ng/fecbc7cd15445dcc9e6608c5b2f159bc74ffdb80.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 19:05:04 GMT
+    - Thu, 23 Aug 2018 18:22:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ObVo8DDLP5ofFG4qZJ-E50; path=/
+    - PHPSESSID=7PqC%2CTabsyeEOhombFlbl2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 19:05:04 GMT
+recorded_at: Thu, 23 Aug 2018 18:22:11 GMT
