--- a/www.nass.gov.ng/3c845c64c673e591735805e30c5b8d7145c235b6.yml
+++ b/www.nass.gov.ng/3c845c64c673e591735805e30c5b8d7145c235b6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 21 Aug 2018 19:10:23 GMT
+    - Thu, 23 Aug 2018 18:28:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Sg6OXhYNCGlfB42bOTl%2CS2; path=/
+    - PHPSESSID=8W%2CXmuybKlTDUVcTz56%2CL2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 21 Aug 2018 19:10:24 GMT
+recorded_at: Thu, 23 Aug 2018 18:28:08 GMT
